// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsPage render should not render otp settings when not default identity type 1`] = `
<base-page
  class="settings-page"
>
  Settings 
  <v-form
    class="save-settings"
    id="save-settings"
    v-on:submit="bound updateSettings"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        Email Address
      </label>
       
      <div
        class="control"
      >
        <input
          class="input is-static"
          readonly="readonly"
          type="email"
        />
      </div>
       
      <p
        class="help"
      >
        Contact support if you need to change your email
        address.
      </p>
    </div>
     
    <v-select
      label="Fiat Currency"
      name="fiatCurrency"
      options="USD,AUD,BRL"
      v-model="newSettings.fiatCurrency"
      v-on:input="bound updateSettings"
    />
  </v-form>
   
  <!---->
</base-page>
`;

exports[`SettingsPage render should render the initial state of the component 1`] = `
<base-page
  class="settings-page"
>
  Settings 
  <v-form
    class="save-settings"
    id="save-settings"
    v-on:submit="bound updateSettings"
  >
    <div
      class="field"
    >
      <label
        class="label"
      >
        Email Address
      </label>
       
      <div
        class="control"
      >
        <input
          class="input is-static"
          readonly="readonly"
          type="email"
        />
      </div>
       
      <p
        class="help"
      >
        Contact support if you need to change your email
        address.
      </p>
    </div>
     
    <v-select
      label="Fiat Currency"
      name="fiatCurrency"
      options="USD,AUD,BRL"
      v-model="newSettings.fiatCurrency"
      v-on:input="bound updateSettings"
    />
  </v-form>
   
  <two-factor-auth-settings />
</base-page>
`;
